--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -4,3 +4,10 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+body{
+  background-color: #F0F2F5;
+}
+.home-display{
+  display: flex;
+  /* justify-content: space-evenly; */
+}
