removed background color

--- a/react-app/src/components/auth/authStyles/LoginForm.css
+++ b/react-app/src/components/auth/authStyles/LoginForm.css
@@ -1,5 +1,5 @@
 body{
-  background-color: rgba(196, 201, 208, 0.324);
+  /* background-color: rgba(196, 201, 208, 0.324); */
 }
 .login-form{
   width: 330px;
