separated last comment from comment list

--- a/react-app/src/components/Feed/CommentView/CommentView.css
+++ b/react-app/src/components/Feed/CommentView/CommentView.css
@@ -12,4 +12,32 @@
   border-bottom-right-radius: 15px;
   padding: 10px;
   font-size: smaller;
+  /* max-width: fit-content; */
+  max-width: 385px;
+}
+.comment-text{
+  margin-top: 5px;
+}
+.edit-comment-div{
+  /* display: flex; */
+}
+.edit-comment-ellipsis{
+  color: #65676B;
+  margin-left: 5px;
+  padding: 10px;
+  cursor: pointer;
+}
+.edit-comment-ellipsis:hover{
+  background-color: rgba(211, 211, 211, 0.389);
+
+  border-radius: 100%;
+
+}
+.view-comment-text{
+  color: #65676B;
+  cursor: pointer;
+}
+.collapse-comments{
+  color: #65676B;
+  cursor: pointer;
 }
