styled commend edit form

--- a/react-app/src/components/CreateComment/CreateCommentForm.css
+++ b/react-app/src/components/CreateComment/CreateCommentForm.css
@@ -16,6 +16,7 @@
   background-color: #e4e6e887;
   padding: 8px 12px;
   width: 100%;
+  margin-top: 10px;
 }
 .comment-user-image{
   width: 30px;
