--- a/react-app/src/components/Feed/SingleComment/CommentEditForm.css
+++ b/react-app/src/components/Feed/SingleComment/CommentEditForm.css
@@ -1,13 +1,19 @@
 .edit-comment-form{
   /* display: flex; */
   /* flex-direction: column; */
-  position: relative;
+  /* position: relative; */
+  /* width: fit-content; */
+  /* height: 200px; */
 }
 .edit-form-input{
+
   outline: none;
-  /* margin-bottom: 20px; */
+  width: 300px;
+  height: 50px;
   border: none;
   background-color: inherit;
+  resize: unset;
+
 }
 .edit-form-btn{
   cursor: pointer;
@@ -15,6 +21,16 @@
   background-color: transparent;
   color: red;
   position: absolute;
-  left: 0;
-  top: 25px;
+  left: 9px;
+  font-size: smaller;
+  /* top: 0; */
+  /* right: 0; */
+  bottom: -20px;
+  /* top: 28px; */
+  font-weight: 700;
+  /* padding-bottom: 100px; */
+
+}
+.edit-form-btn:hover{
+  text-decoration: underline;
 }
