--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -5,6 +5,7 @@
   /* background-color: white; */
   /* border: 2px solid black; */
   /* width: 100%; */
+  /* padding: 200px; */
 
 }
 .nav-container > ul > * {
@@ -12,9 +13,12 @@
 }
 .nav-list{
   /* width: 100%; */
+  height: 83px;
   background-color: white;
   display: flex;
   align-items: center;
+  position: relative;
+  border: 2px solid black;
   /* justify-content: space-around; */
   list-style: none;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
@@ -37,6 +41,25 @@
   padding-left: 10px;
   margin-top: 3px;
   margin-bottom: 3px;
+  border: 2px solid black;
+}
+.nav-left-clicked{
+  /* margin-top: 2px; */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  /* border: 1px solid blue; */
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  position: absolute;
+  left: 35px;
+  top: 0px;
+  width: 250px;
+  height: 400px;
+  z-index: 1000;
+  background-color: white;
+}
+.hide-icon{
+  display: none;
 }
 .search-bar{
   display: flex;
@@ -73,4 +96,15 @@
   padding-right: 15px;
   background-color: white;
 
+}
+
+.user-list-item{
+  text-decoration: none;
+  list-style: none;
+  color: black;
+}
+.user-list-item > a{
+  color: black;
+  text-decoration: none;
+  list-style: none;
 }
