--- a/react-app/src/components/Feed/Posts/Posts.css
+++ b/react-app/src/components/Feed/Posts/Posts.css
@@ -11,6 +11,7 @@
   /* position: absolute; */
   /* top: 5em; */
   /* left: 30vw; */
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
@@ -19,6 +20,7 @@
   margin-bottom: 40px;
   padding: 16px;
   position: relative;
+
 }
 
 .edit-post-button{
