--- a/react-app/src/components/CreatePost/CreatePostForm.css
+++ b/react-app/src/components/CreatePost/CreatePostForm.css
@@ -46,6 +46,7 @@
   padding: 16px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   margin-bottom: 20px;
+  margin: 30px auto;
 }
 .create-post-section{
   display: flex;
