--- a/react-app/src/components/Feed/SideBar/SideBar.css
+++ b/react-app/src/components/Feed/SideBar/SideBar.css
@@ -7,12 +7,14 @@
 }
 .sidebar-container{
   margin-top: 20px;
+  width: 280px;
+  position: absolute;
 }
 .sidebar-container > * {
   /* margin: 10px; */
   margin-left: 10px;
   margin-bottom: 5px;
-  width: 280px;
+  max-width: 280px;
   display: flex;
   align-items: center;
   padding: 5px;
@@ -23,4 +25,9 @@
   width: 30px;
   margin-right: 10px;
 
+}
+@media screen and (max-width: 1000px) {
+  .sidebar-container{
+    display: none;
+  }
 }
