--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -41,6 +41,7 @@
 .search-bar{
   display: flex;
   align-items: center;
+  justify-content: center;
   background-color: rgba(211, 211, 211, 0.246);
   border-radius: 999px;
   height: 40px;
@@ -73,4 +74,19 @@
   padding-right: 15px;
   background-color: white;
 
+}
+
+@media screen and (max-width: 1000px) {
+  .search-bar{
+    width: 40px;
+  }
+  .search-input{
+    display: none;
+    /* opacity: 0; */
+
+  }
+  .search-bar > *{
+    padding-left: 0;
+    /* border-radius: 999px; */
+  }
 }
