--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -99,7 +99,7 @@
 
 }
 
-<<<<<<< HEAD
+
 .user-list-item{
   text-decoration: none;
   list-style: none;
@@ -109,7 +109,7 @@
   color: black;
   text-decoration: none;
   list-style: none;
-=======
+}
 @media screen and (max-width: 1000px) {
   .search-bar{
     width: 40px;
@@ -123,5 +123,4 @@
     padding-left: 0;
     /* border-radius: 999px; */
   }
->>>>>>> 6f695bd0a252a3f30d8cbed46f56e83e7086f0d3
 }
