--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -13,12 +13,11 @@
 }
 .nav-list{
   /* width: 100%; */
-  height: 83px;
+  height: 56px;
   background-color: white;
   display: flex;
   align-items: center;
   position: relative;
-  border: 2px solid black;
   /* justify-content: space-around; */
   list-style: none;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
@@ -41,7 +40,6 @@
   padding-left: 10px;
   margin-top: 3px;
   margin-bottom: 3px;
-  border: 2px solid black;
 }
 .nav-left-clicked{
   /* margin-top: 2px; */
@@ -57,6 +55,10 @@
   height: 400px;
   z-index: 1000;
   background-color: white;
+}
+.nav-left-clicked > input{
+  background-color: blue;
+  margin-top: 200px;
 }
 .hide-icon{
   display: none;
@@ -77,7 +79,8 @@
   outline: none;
   border: none;
   background-color: rgba(211, 211, 211, 0.056);
-
+  cursor: pointer;
+  padding: 20px;
 }
 .nav-list > li > .nav-middle{
   background-color: white;
@@ -88,6 +91,7 @@
   flex: 1;
   justify-content: space-around;
 }
+
 
 .nav-right{
   display: flex;
