--- a/react-app/src/components/Feed/Posts/Posts.css
+++ b/react-app/src/components/Feed/Posts/Posts.css
@@ -1,7 +1,4 @@
 .main-feed{
-  /* position: absolute;
-  top: 20%;
-  left: 20vw; */
   margin-top: 55px;
   margin-left: 80px;
   margin-right: 80px;
@@ -13,55 +10,40 @@
 }
 .single-post{
   background-color: white;
-  /* width: 40%; */
-  /* height: 10em; */
-  /* position: absolute; */
-  /* top: 5em; */
-  /* left: 30vw; */
   max-width: 500px;
   display: flex;
   flex-direction: column;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
-  /* box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px; */
   border-radius: 10px;
   margin: 0 auto;
   margin-bottom: 40px;
-  /* padding: 16px; */
   position: relative;
 
 }
 .single-post > *:not(.post-images){
-  /* padding: 16px; */
   padding-left: 16px;
   padding-right: 16px;
 }
 
 .edit-post-button{
-  /* width: 100%; */
   position: absolute;
   right: 0;
   cursor: pointer;
-  /* padding-right: 16px; */
-  /* margin-bottom: 100px; */
-
 }
+
 .edit-post-ellipsis{
-  /* margin-right: 16px; */
-  /* margin-top: 5px; */
   height: 100%;
   width: 5px;
   height: 5px;
- color: #65676B;
- position: absolute;
- right: 16px;
- top: 16px;
- padding: 16px;
- /* margin-right: 16px; */
- display: flex;
- align-items: center;
- justify-content: center;
- transition-delay: 80ms;
+  color: #65676B;
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition-delay: 80ms;
 }
 .edit-post-ellipsis:hover{
   background-color: rgba(211, 211, 211, 0.389);
@@ -86,14 +68,12 @@
 }
 .post-content{
   width: 100%;
+  word-wrap: break-word;
   margin-bottom: 15px;
   margin-top: 10px;
   padding-bottom: 10px;
 }
 .post-images{
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: center; */
   padding-bottom: 10px;
   padding: -16px;
 }
