--- a/react-app/src/components/CreatePost/CreatePostForm.css
+++ b/react-app/src/components/CreatePost/CreatePostForm.css
@@ -1,7 +1,6 @@
 .create-post-container{
   width: 500px;
-  min-height: 440px;
-
+  height: 440px;
 }
 .create-post-header{
   font-weight: 700;
@@ -40,7 +39,7 @@
 }
 .create-form-inner-container{
   min-height: 200px;
-  max-height: 400px;
+  /* max-height: 400px; */
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
@@ -94,16 +93,17 @@
 
 .file-input-container{
   border: 1px solid #EAEBED;
-  padding-bottom: 100px;
-  width: 465px;
+  /* padding-bottom: 100px; */
+  /* width: 465px; */
   min-height: 217px;
+  max-height: max-content;
   margin-left: 5px;
   position: relative;
   border-radius: 10px;
 
 }
 .textarea-with-upload{
-  overflow-y: scroll;
+  /* overflow-y: scroll; */
   max-height: 150px;
 }
 
@@ -228,5 +228,22 @@
   text-decoration: none;
   list-style: none;
   font-size: 16px;
-  margin-left: 75px;
+  margin-left: 70px;
+  font-weight: 700;
+  padding-bottom: 10px;
+}
+
+.preview-image{
+  object-fit: contain;
+  /* width: 460px; */
+
+  width: 98%;
+  /* max-height: 10%; */
+  /* height: 98%; */
+  margin-left: 5px;
+  margin-top: 5px;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
 }
