--- a/react-app/src/components/Feed/SingleComment/CommentEditForm.css
+++ b/react-app/src/components/Feed/SingleComment/CommentEditForm.css
@@ -1,20 +1,18 @@
-.edit-comment-form{
-  /* display: flex; */
-  /* flex-direction: column; */
-  /* position: relative; */
-  /* width: fit-content; */
-  /* height: 200px; */
-}
 .edit-form-input{
-
   outline: none;
-  width: 300px;
+  width: 370px;
   height: 50px;
   border: none;
   background-color: inherit;
   resize: unset;
-
+  padding-right: 5px;
+  overflow: visible;
 }
+
+.edit-form-input::-webkit-scrollbar{
+  display: none;
+}
+
 .edit-form-btn{
   border: none;
   background-color: transparent;
@@ -22,18 +20,10 @@
   left: 0;
   top: 65px;
   font-size: smaller;
-  /* top: 0; */
-  /* right: 0; */
   color: gray;
   bottom: -20px;
-  /* top: 28px; */
-  /* font-weight: 700; */
-  /* padding-bottom: 100px; */
+}
 
-}
-.edit-form-btn:hover{
-  /* text-decoration: underline; */
-}
 .cancel-comment-edit{
   color: #1876F2;
   cursor: pointer;
@@ -43,4 +33,26 @@
 }
 .profile-icon-click{
   cursor: pointer;
+}
+.submit-comment-edit-btn{
+  color: rgba(0, 0, 255, 0.645);
+  border: none;
+  background-color: transparent;
+  position: absolute;
+  bottom: 27px;
+  right: -34px;
+  cursor: pointer;
+  font-weight: 500;
+}
+.edit-comment-errors{
+  color: red;
+}
+.edit-comment-errors>li{
+  text-decoration: none;
+  list-style: none;
+  font-size: 12px;
+  margin-left: 45px;
+  position: absolute;
+  top: -15px;
+  font-weight: 700;
 }
