--- a/react-app/src/components/EditPost/EditPostForm.css
+++ b/react-app/src/components/EditPost/EditPostForm.css
@@ -1,11 +1,27 @@
 .post-options-menu{
-  width: 200px;
-  height: 200px;
-  background-color: white;
+  width: 330px;
+  height: 86px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.post-options-menu > *{
+  border-radius: 1000px;
+  margin: 5px;
+  height: 50%;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
-.edit-post-button{
-
+.post-options-menu > *:hover{
+  background-color: #F0F2F5;
+  border-radius: 3px;
 }
