--- a/react-app/src/components/auth/authStyles/LoginForm.css
+++ b/react-app/src/components/auth/authStyles/LoginForm.css
@@ -3,7 +3,7 @@ body{
 }
 .login-form{
   width: 330px;
-  height: 350px;
+  height: 400px;
   /* width: max-content; */
   /* width: 100%; */
   display: flex;
@@ -64,4 +64,10 @@ body{
 }
 .or-text{
   margin-top: 10px;
+}
+.login-errors{
+  color: red;
+  display: flex;
+  flex-direction: column;
+  padding-top: 10px;
 }
