--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -108,10 +108,8 @@
   width: 100%;
   align-self: flex-end;
   justify-content: flex-end;
-  /* padding-right: 15px; */
   background-color: white;
   margin-right: 15px;
-
 }
 
 
@@ -131,12 +129,9 @@
   }
   .search-input{
     display: none;
-    /* opacity: 0; */
-
   }
   .search-bar > *{
     padding-left: 0;
-    /* border-radius: 999px; */
   }
 }
 
@@ -146,15 +141,10 @@
   top: 50px;
   right: 40px;
   background-color: white;
-  height: 56px;
-  /* height: min-content; */
   width: 120px;
   z-index: 1000;
-  /* border: 10px solid yellow; */
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   border-radius: 5px;
-  /* border-bottom-left-radius: 20px; */
-  /* border-bottom-right-radius: 20px; */
 }
 .profile-dropdown > *:hover{
   background-color: rgba(211, 211, 211, 0.436);
@@ -165,10 +155,16 @@
 }
 .profile-click{
   cursor: pointer;
-  /* border: 5px solid black; */
   padding-left: 5px;
   padding-top: 5px;
   padding-bottom: 5px;
+}
+.friends-click{
+  cursor: pointer;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
+  padding-left: 5px;
 }
 
 .github-icon{
