--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -4,7 +4,18 @@
   display: flex;
   justify-content: center;
   /* height: 90vh; */
-
+  /* border: 1px solid black; */
+  /* padding-bottom: 300px; */
+  /* position: relative; */
+}
+.profile-top-container{
+  /* border: 1px solid black; */
+  margin-bottom: 20px;
+  background-color: white;
+  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
+  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+  box-shadow: rgba(220, 220, 220, 0.893) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  background-image: linear-gradient(rgba(160, 142, 142, 0.248), rgb(255, 255, 255))
 }
 .profile-top{
   /* position: relative; */
@@ -16,7 +27,7 @@
   height: 168px;
   border-radius: 100%;
   border: 5px solid white;
-
+  object-fit: cover;
 }
 .cover-photo-container{
   width: 940px;
@@ -25,7 +36,9 @@
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
 }
-
+.profile-post-header{
+  color: #7D7F82;
+}
 
 .user-profile-header{
   /* margin: 0 auto; */
@@ -40,19 +53,30 @@
   /* top: 0; */
 }
 .users-name-image{
-  width: 100%;
+  /* width: 100%; */
   position: absolute;
   top: -40px;
   left: 40px;
+  border-bottom: .5px solid #96989b86;
+  padding-bottom: 10px;
+
+}
+.profile-user-info{
+  width: 860px;
 }
 .profile-top-underline{
-  border-bottom: 1px solid #96989bdc;
-  width: 100%;
+  border-bottom: 1px solid #96989b51;
+  /* width: 100%; */
+
   /* border: 10px solid black; */
   position: absolute;
   top: 150px;
+  /* padding-left: 800px; */
+  /* margin-left: 50px; */
+  /* margin-right: 50px; */
 
 }
+
 /* .user-profile-header::after{
   width: 10px;
   height: 10px;
@@ -86,4 +110,21 @@
 }
 .friend-btn:hover{
   background-color: #D8DADF;
+}
+.profile-lower{
+  display: flex;
+  justify-content: center;
+  max-width: max-content;
+  margin: 0 auto;
+}
+.profile-lower > :last-child{
+}
+.friends-list-container{
+  width: 23em;
+  height: min-content;
+  background-color: white;
+  border-radius: 10px;
+
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  margin-right: 20px;
 }
