--- a/react-app/src/components/CreateComment/CreateCommentForm.css
+++ b/react-app/src/components/CreateComment/CreateCommentForm.css
@@ -20,12 +20,31 @@
   padding: 8px 12px;
   width: 100%;
   padding-right: 100px;
+  user-select: none;
+
 }
 .comment-user-image{
   width: 30px;
   height: 30px;
   border-radius: 100%;
   margin-right: 5px;
+  user-select: none;
+}
+.comment-user-image:hover {
+  -webkit-filter: brightness(90%);
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.comment-user-image:active {
+  -webkit-filter: brightness(80%);
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  transition: all 500ms ease;
 }
 .submit-comment-btn{
   color: rgba(0, 0, 255, 0.645);
@@ -36,6 +55,7 @@
   right: 30px;
   cursor: pointer;
   font-weight: 500;
+  user-select: none;
 }
 .create-comment-errors{
   color: red;
