--- a/react-app/src/components/Friends/OneFriend/OneFriend.css
+++ b/react-app/src/components/Friends/OneFriend/OneFriend.css
@@ -1,11 +1,38 @@
 .friend{
   cursor: pointer;
+  user-select: none;
+
 }
 .friend-image{
   width: 100px;
   height: 100px;
   border-radius: 10px;
   object-fit: cover;
+
+}
+.friend-image:hover{
+  /* background-color: rgba(0, 0, 0, 0.271);
+  background-blend-mode: darken; */
+
+}
+.friend-image:hover {
+  -webkit-filter: brightness(90%);
+  -webkit-transition: all 500ms ease;
+  -moz-transition: all 500ms ease;
+  -o-transition: all 500ms ease;
+  -ms-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.friend-image:active{
+
+  -webkit-filter: brightness(80%);
+  -webkit-transition: all 50ms ease;
+  -moz-transition: all 50ms ease;
+  -o-transition: all 50ms ease;
+  -ms-transition: all 50ms ease;
+  transition: all 50ms ease;
+  transform: scale(0.99);
+
 }
 .one-friend{
   margin-bottom: 20px;
