--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -7,6 +7,7 @@
   /* border: 1px solid black; */
   /* padding-bottom: 300px; */
   /* position: relative; */
+  /* height: 100%; */
 }
 .profile-top-container{
   /* border: 1px solid black; */
@@ -28,6 +29,9 @@
   border-radius: 100%;
   border: 5px solid white;
   object-fit: cover;
+  background-color: white;
+  user-select: none;
+
 }
 .cover-photo-container{
   width: 940px;
@@ -35,9 +39,6 @@
   background-image: url("https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg");
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-}
-.profile-post-header{
-  color: #7D7F82;
 }
 
 .user-profile-header{
@@ -66,39 +67,50 @@
 }
 .profile-top-underline{
   border-bottom: 1px solid #96989b51;
-  /* width: 100%; */
-
-  /* border: 10px solid black; */
   position: absolute;
   top: 150px;
-  /* padding-left: 800px; */
-  /* margin-left: 50px; */
-  /* margin-right: 50px; */
-
 }
 
-/* .user-profile-header::after{
-  width: 10px;
-  height: 10px;
-  background-color: blue;
-} */
 .profile-users-name{
-  /* margin-top: 50px; */
-  /* margin-left: 10px; */
   font-size: 32px;
   position: absolute;
   top: 20px;
   left: 220px;
 }
+
+.profile-options{
+  display: flex;
+  border: 1px solid black;
+}
 .profile-body{
   text-align: center;
   width: 200px;
   height: 30px;
-  /* position: absolute; */
-  /* background-color: blue; */
   margin: 170px auto 0;
   font-weight: 700;
+  display: flex;
+  justify-content: space-between;
 }
+
+.profile-post-header, .profile-friends-header{
+  color: #7D7F82;
+  cursor: pointer;
+  width: 70px;
+  user-select: none;
+}
+.profile-post-header:hover, .profile-friends-header:hover{
+    /* background-color: #D8DADF; */
+    color: #383a3e;
+
+}
+.profile-post-header-active, .profile-friends-header-active{
+  color: #2980F3;
+  border-bottom: 3px solid #1876F2;
+  width: 70px;
+  cursor: pointer;
+  user-select: none;
+}
+
 
 .friend-btn{
   border: none;
@@ -107,6 +119,7 @@
   border-radius: 5px;
   font-weight: 700;
   cursor: pointer;
+  user-select: none;
 }
 .friend-btn:hover{
   background-color: #D8DADF;
@@ -124,7 +137,7 @@
   height: min-content;
   background-color: white;
   border-radius: 10px;
-
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
   margin-right: 20px;
+  margin-bottom: 20px;
 }
