--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -8,6 +8,10 @@
   /* padding: 200px; */
   user-select: none;
   width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 100;
+  /* margin-bottom: 100em; */
 }
 .nav-container > ul > * {
   width: 100%;
