--- a/react-app/src/components/Feed/SideBar/SideBar.css
+++ b/react-app/src/components/Feed/SideBar/SideBar.css
@@ -22,7 +22,22 @@
 .sidebar-container > div > *{
   width: 30px;
   margin-right: 10px;
+}
+.sidebar-to-profile{
+  cursor: pointer;
+  border-radius: 5px;
 
+}
+.sidebar-to-friends{
+  cursor: pointer;
+  border-radius: 5px;
+
+}
+.sidebar-to-profile:hover{
+  background-color: #E4E6E8;
+}
+.sidebar-to-friends:hover{
+  background-color: #E4E6E8;
 }
 @media screen and (max-width: 1100px) {
   .sidebar-container{
