--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -3,30 +3,19 @@
 }
 .profile-container{
   max-width: 100vw;
-  /* margin: 0 auto; */
   display: flex;
   justify-content: center;
-  /* height: 90vh; */
-  /* border: 1px solid black; */
-  /* padding-bottom: 300px; */
-  /* position: relative; */
-  /* height: 100%; */
 }
 .profile-top-container{
-  /* border: 1px solid black; */
   margin-bottom: 20px;
   background-color: white;
-  /* box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px; */
-  /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
   box-shadow: rgba(220, 220, 220, 0.893) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   background-image: linear-gradient(rgba(160, 142, 142, 0.248), rgb(255, 255, 255))
 }
 .profile-top{
-  /* position: relative; */
-  /* margin: 0 auto; */
   max-height: 500px;
 }
-.profile-image{
+.profile-image, .profile-image-preview{
   width: 168px;
   height: 168px;
   border-radius: 100%;
@@ -34,30 +23,85 @@
   object-fit: cover;
   background-color: white;
   user-select: none;
+}
 
+#profile-img-input{
+  display: none;
+}
+.edit-pro-img-container{
+  /* position: relative; */
+  /* background-color: blue;
+  border: 1px solid black; */
+  /* height: 36px;
+  width: 36px; */
+  /* position: relative; */
+}
+.profile-img-label{
+  font-size: 20px;
+  display: block;
+  background-color: #E4E6EB;
+  width: 36px;
+  height: 36px;
+  text-align: center;
+  line-height: 36px;
+  border-radius: 100%;
+  cursor: pointer;
+  position: absolute;
+  bottom: 1.5em;
+  left: 6em;
+}
+.profile-img-label:hover{
+  background-color: #D8DADF;
+}
+.accept-profile-img{
+  background-color: #E4E6EB;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  bottom: 2.2em;
+  right: 44em;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  cursor: pointer;
+}
+.accept-profile-img:hover{
+  background-color: #D8DADF;
+}
+.decline-profile-img{
+  background-color: #E4E6EB;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  bottom: 2.2em;
+  right: 41.5em;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  cursor: pointer;
+}
+.decline-profile-img:hover{
+  background-color: #D8DADF;
 }
 .cover-photo-container{
   width: 940px;
   height: 348px;
-  background-image: url("https://www.industrialempathy.com/img/remote/ZiClJf-1920w.jpg");
+  background-image: url("https://images.unsplash.com/photo-1496096265110-f83ad7f96608?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80");
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+  /* background-repeat: no-repeat; */
+  background-size: cover;
 }
 
 .user-profile-header{
-  /* margin: 0 auto; */
   display: flex;
   position: relative;
-  /* top: 30px; */
-  /* left: 20px; */
-  /* width: 100%; */
-
-  /* align-items: center; */
-
-  /* top: 0; */
 }
 .users-name-image{
-  /* width: 100%; */
   position: absolute;
   top: -40px;
   left: 40px;
