--- a/react-app/src/components/Feed/Posts/Posts.css
+++ b/react-app/src/components/Feed/Posts/Posts.css
@@ -52,7 +52,7 @@
   margin-top: 16px;
   display: flex;
   align-items: center;
-
+  user-select: none;
 }
 .post-user-info:last-of-type{
   margin-left: auto;
@@ -71,10 +71,13 @@
   margin-bottom: 15px;
   margin-top: 10px;
   padding-bottom: 10px;
+  caret-color: transparent;
+
 }
 .post-images{
   padding-bottom: 10px;
   padding: -16px;
+  caret-color: transparent;
 }
 .single-post-image{
   padding: -16px;
