--- a/react-app/src/components/RightSideBar/RightSideBar.css
+++ b/react-app/src/components/RightSideBar/RightSideBar.css
@@ -1,37 +1,22 @@
 .right-sidebar-container{
   width: 280px;
-  /* margin-top: 1.9em; */
-  /* position: absolute; */
-  /* right: 0;
-  top: 0; */
-  /* border: 1px solid black; */
-  /* background-color: blue; */
-
-  /* overflow: hidden; */
-
+  user-select: none;
 }
 .contacts-container{
-  /* position: fixed;
-  top: 0;
-  right: 0; */
   width: 280px;
-
   margin-top: 5em;
-
   position: fixed;
   top: 0;
   right: 0;
 }
 .contact{
-  /* border: 1px solid black; */
   display: flex;
   align-items: center;
-  /* margin-top: 10px; */
   color: #050505;
-  /* border: 1px solid black; */
   cursor: pointer;
   border-radius: 5px;
   padding: 8px;
+  user-select: none;
 }
 .contact:hover{
   background-color: #E4E6E8;
@@ -39,18 +24,22 @@
 }
 .contact-name{
   padding-left: 10px;
+  user-select: none;
 }
+
 .contacts-header{
   color: #65676B;
   font-weight: 600;
   padding: 8px;
-  /* margin-bottom: 10em; */
+  user-select: none;
 }
+
 .contact-image{
   width: 30px;
   height: 30px;
   border-radius: 100%;
   object-fit: cover;
+  user-select: none;
 }
 
 @media screen and (max-width: 1000px) {
