--- a/react-app/src/components/Feed/Posts/Posts.css
+++ b/react-app/src/components/Feed/Posts/Posts.css
@@ -57,6 +57,7 @@
 .post-user-info:last-of-type{
   margin-left: auto;
 }
+
 .post-user-image{
   width: 40px;
   height: 40px;
@@ -64,6 +65,12 @@
   cursor: pointer;
   object-fit: cover;
   user-select: none;
+}
+.post-createdat{
+  font-size: 12px;
+  text-decoration: none;
+  list-style: none;
+  color: rgb(149, 140, 140);
 }
 .post-content{
   width: 100%;
