--- a/react-app/src/components/Feed/Posts/Posts.css
+++ b/react-app/src/components/Feed/Posts/Posts.css
@@ -96,6 +96,39 @@
   border-bottom: 1px solid #e4e6e8ec;
   margin-left: 16px;
   margin-right: 16px;
-  margin-bottom: 16px;
+  /* margin-bottom: 16px; */
+
+}
+.like-comment-section{
+  width: inherit;
+  margin-left: 16px;
+  margin-right: 16px;
+  height: 2.8em;
+  border-bottom: 1px solid #e4e6e8ec;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  user-select: none;
+}
+.click-like, .click-comment{
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  line-height: 2em;
+  width: 161px;
+  justify-content: center;
+  border-radius: 5px;
+}
+.click-like:hover, .click-comment:hover{
+  background-color: #e4e6e872;
+  /* background-color: #a7a9aba2; */
+
+}
+.like-icon-text, .comment-icon-text{
+  padding-top: 2px;
+  margin-left: 5px;
+}
+.like-icon, .comment-icon{
+  /* color: #5B626A; */
 
 }
