--- a/react-app/src/components/Feed/Posts/Posts.css
+++ b/react-app/src/components/Feed/Posts/Posts.css
@@ -82,9 +82,11 @@
 
 }
 .post-images{
-  padding-bottom: 10px;
-  padding: -16px;
+  padding: 0;
+  margin: 0;
+  max-height: max-content;
   caret-color: transparent;
+
 }
 .single-post-image{
   padding: -16px;
@@ -96,7 +98,6 @@
   border-bottom: 1px solid #e4e6e8ec;
   margin-left: 16px;
   margin-right: 16px;
-  /* margin-bottom: 16px; */
 
 }
 .like-comment-section{
