--- a/react-app/src/components/Feed/Posts/Posts.css
+++ b/react-app/src/components/Feed/Posts/Posts.css
@@ -144,6 +144,13 @@
   font-weight: 500;
   font-size: 13px;
 }
+.liked{
+  color: blue;
+  padding-top: 2px;
+  margin-left: 5px;
+  font-weight: 500;
+  font-size: 13px;
+}
 .comment-icon-text{
   color: #606266;
   font-weight: 500;
