--- a/react-app/src/components/Navigation/Navigation.css
+++ b/react-app/src/components/Navigation/Navigation.css
@@ -1,29 +1,19 @@
 .nav-container{
-  /* display: flex; */
-  /* align-items: center; */
-  /* justify-content: space-evenly; */
-  /* background-color: white; */
-  /* border: 2px solid black; */
-  /* width: 100%; */
-  /* padding: 200px; */
   user-select: none;
   width: 100%;
   position: fixed;
   top: 0;
   z-index: 100;
-  /* margin-bottom: 100em; */
 }
 .nav-container > ul > * {
   width: 100%;
 }
 .nav-list{
-  /* width: 100%; */
   height: 56px;
   background-color: white;
   display: flex;
   align-items: center;
   position: relative;
-  /* justify-content: space-around; */
   list-style: none;
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
@@ -31,9 +21,7 @@
   background-color: white;
 }
 
-
 .nav-container > ul > * {
-  /* width: 100%; */
   display: flex;
   justify-content: space-between;
   background-color: white;
@@ -45,26 +33,35 @@
   padding-left: 10px;
   margin-top: 3px;
   margin-bottom: 3px;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 .nav-left-clicked{
-  /* margin-top: 2px; */
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  /* border: 1px solid blue; */
-  padding-left: 20px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px -1px 2px;
+  padding-left: 60px;
   padding-right: 20px;
-  padding-top: 20px;
+  padding-bottom: 8.5px;
+  padding-top: 5px;
   position: absolute;
-  left: 35px;
-  top: 0px;
-  width: 250px;
-  height: 400px;
+  left: -20px;
+  top: -30px;
+  width: 300px;
+  min-height: min-content;
   z-index: 1000;
   background-color: white;
+  transition-duration: 100ms;
+  max-height: 25.5em;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
-.nav-left-clicked > input{
-  background-color: blue;
-  margin-top: 200px;
+.userlist-container{
+  margin-top: 10px;
+  margin-bottom: -10px;
+  margin-left: -40px;
+  margin-right: -17px;
+  max-height: 20em;
 }
+
 .hide-icon{
   display: none;
 }
@@ -76,19 +73,47 @@
   border-radius: 100%;
 }
 .search-nav{
+  display: flex;
+  align-items: center;
   margin-left: 20px;
+  max-width: 270px;
+  position: absolute;
+  overflow-x: visible;
+}
+.nav-left-clicked > .search-bar{
+  margin-left: 9px;
+  margin-top: 4px;
+  margin-right: -5px;
+  padding-right: 5px;
+  cursor: none;
+  overflow-x: hidden;
+  overflow-y: hidden;
+
+}
+.left-arrow-search{
+  position: absolute;
+  cursor: pointer;
+  top: 20px;
+  left: 20px;
+  overflow-x: hidden;
+
 }
 .search-bar{
   display: flex;
   align-items: center;
-  justify-content: center;
   background-color: rgba(211, 211, 211, 0.246);
   border-radius: 999px;
   height: 40px;
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+
 }
+
 .search-bar > *{
   padding-left: 10px;
   border-radius: 999px;
+
 }
 .search-input{
   outline: none;
@@ -96,17 +121,28 @@
   background-color: rgba(211, 211, 211, 0.056);
   cursor: pointer;
   padding: 20px;
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 .nav-list > li > .nav-middle{
   background-color: white;
 }
 .nav-middle{
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  margin: 0 auto;
+  width: 250px;
+  height: 100%;
   background-color: white;
   display: flex;
-  flex: 1;
+  align-items: center;
   justify-content: space-around;
 }
-
+.nav-middle > a{
+  text-decoration: none;
+}
 
 .nav-right{
   display: flex;
@@ -131,11 +167,9 @@
   -o-transition: all 50ms;
   -ms-transition: all 50ms;
   transition: all 50ms;
-  /* border: .1px solid rgba(0, 0, 0, 0); */
-  /* padding: .5px; */
   transform: scale(0.97);
-
 }
+
 .user-list-item{
   text-decoration: none;
   list-style: none;
@@ -146,17 +180,34 @@
   text-decoration: none;
   list-style: none;
 }
-@media screen and (max-width: 1000px) {
-  .search-bar{
-    width: 40px;
-  }
-  .search-input{
-    display: none;
-  }
-  .search-bar > *{
-    padding-left: 0;
-  }
+
+.search-list-item{
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  margin-bottom: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  padding-left: 5px;
 }
+.search-list-item:hover{
+  background-color: #E4E6E8;
+}
+.search-users-name{
+  margin-left: 5px;
+  font-weight: 600;
+}
+.search-users-firstname{
+  color: rgba(128, 128, 128, 0.648);
+}
+.search-user-img{
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  object-fit: cover;
+}
+
 
 /*  PROFILE DROP DOWN MENU */
 .profile-dropdown{
@@ -191,10 +242,30 @@
 }
 
 .github-icon{
-  width: 24px;
-  height: 24px;
+  font-size: 30px;
+  color: gray;
+  width: 80px;
+  display: flex;
+  justify-content: center;
 }
 .linkedin-icon{
-  width: 24px;
-  height: 24px;
+  font-size: 30px;
+  color: gray;
+  width: 80px;
+  display: flex;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1000px) {
+  .search-bar{
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+  }
+  .search-input::placeholder{
+    color: transparent;
+  }
+  .search-bar > *{
+    padding-left: 0;
+  }
 }
