--- a/react-app/src/components/LeftSideBar/SideBar.css
+++ b/react-app/src/components/LeftSideBar/SideBar.css
@@ -6,10 +6,18 @@
   object-fit: cover;
 }
 .sidebar-container{
-  width: 280px;
-  margin-left: 16px;
-  position: fixed;
-  user-select: none;
+  /* width: 280px; */
+  /* margin-left: 4em; */
+  position: sticky;
+  top: 5em;
+  bottom: 1em;
+  margin-right: ;
+  /* right: 4em; */
+  /* left: 3em; */
+  /* border: 1px solid black; */
+  /* left: 0; */
+  /* right: 70.5%; */
+  /* left: 0; */
 }
 .sidebar-container > * {
   /* margin: 10px; */
@@ -69,7 +77,7 @@
   font-size: 25px;
   color: #9D80D0;
 }
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1000px) {
   .sidebar-container{
     display: none;
   }
