--- a/react-app/src/components/Posts/Posts.css
+++ b/react-app/src/components/Posts/Posts.css
@@ -1,11 +1,13 @@
 .main-feed{
-  margin-left: 8em;
-  margin-right: 8em;
-  position: absolute;
+  /* margin-left: 8em; */
+  /* margin-right: 25em; */
+  /* position: absolute; */
   top: 0;
   left: 0;
   right: 0;
   padding-bottom: 20px;
+  /* margin-left: auto;
+  margin-right: auto; */
 }
 .single-post{
   background-color: white;
